--- a/client/index.html
+++ b/client/index.html
@@ -11,5 +11,6 @@
   <!-- The app will bootstrap into this div -->
   <div id="app"></div>
   <script src="/app/build/bundle.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD_XoCQVsMYeY6Ff_-yrz1PpMlUpGJyn7g&libraries=places"></script>
 </body>
 </html>
